alignment fixed

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -37,6 +37,13 @@ select {
 
 /* --- end of CSS reset --- */
 
+#root {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
   background-color: #f8f7f3;
